--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,23 @@
+/*! ------------------------------------------------
+ * Project Name: Rayo - Digital Agency & Personal Portfolio Next.Js Template
+ * Project Description: Elevate your digital presence with Rayo - dynamic and stylish Next.Js template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.
+ * Tags: ib-themes, resume, portfolio, personal page, cv, template, one page, responsive, Next.js, css3, creative, clean, agency, studio 
+ * Version: 1.0.0
+ * Build Date: October 2025
+ * Last Update: October 2025
+ * This product is available exclusively on Themeforest
+ * Author: ib-themes
+ * Author URI: https://themeforest.net/user/ib-themes  /*! File name: plugins.css
+ * ------------------------------------------------
+ *
+ * ------------------------------------------------
+ * Table of Contents
+ * ------------------------------------------------
+ *  01. custom css for Nextjs
+ * ------------------------------------------------
+ * Table of Contents End
+ * ------------------------------------------------ */
+
 @import url("./plugins.min.css");
 @import url("./main.min.css");
 html {
